Fix the little horizontal scroll issue

--- a/src/app.scss
+++ b/src/app.scss
@@ -5,6 +5,6 @@
 
 	@include mobile {
 		flex: none;
-		width: 100vw;
+		width: 100%;
 	}
 }
