--- a/src/mixins.scss
+++ b/src/mixins.scss
@@ -1,5 +1,5 @@
 @mixin mobile {
-	@media (max-width: 480px) {
+	@media (max-width: 550px) {
 		@content;
 	}
 }
